version/0.19/_sources/api/solver/_autosummary/settings/volumetric_species.rst.txt
:orphan:

.. _volumetric_species:

volumetric_species
==================

.. autoclass:: ansys.fluent.core.solver.settings_241.volumetric_species.volumetric_species
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`fluid_child <fluid_child>`


.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`species <species_3>`       'species' child.

==========================   ====================

