version/0.27/_sources/api/solver/_autosummary/settings/volumetric_species.rst.txt
:orphan:

.. _volumetric_species:

volumetric_species
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.volumetric_species
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`volumetric_species_child <volumetric_species_child>`


.. rubric:: Included in:

============================   ============================

Parent                                              Summary

============================   ============================
:ref:`species_3 <species_3>`       Specify mixture species.

============================   ============================

